--- a/Bankruptcy_prediction_class_imbalance_problem.ipynb
+++ b/Bankruptcy_prediction_class_imbalance_problem.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Bankruptcy_prediction_class_imbalance_problem.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/RitwickRoy/Classification_with_class_imbalance/blob/main/Bankruptcy_prediction_class_imbalance_problem.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
